welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:4: error: ';' expected but ',' found.
avance(),avance()
        ^